--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "bsb -make-world -w -ws _ ",
     "clean": "bsb -clean-world",
     "server": "moduleserve ./ --port 8000",
+    "deploy": "webpack; push-dir --dir=dist --branch=gh-pages",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -16,9 +17,13 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "copy-webpack-plugin": "^5.1.1",
+    "push-dir": "^0.4.1",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
-    "reason-react": ">=0.7.0"
+    "reason-react": ">=0.7.0",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10"
   },
   "devDependencies": {
     "bs-platform": "^7.0.1",
