--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
   "license": "MIT",
   "dependencies": {
     "copy-webpack-plugin": "^5.1.1",
-    "push-dir": "^0.4.1",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
-    "reason-react": ">=0.7.0",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10"
+    "reason-react": ">=0.7.0"
   },
   "devDependencies": {
     "bs-platform": "^7.0.1",
-    "moduleserve": "^0.9.0"
+    "moduleserve": "^0.9.0",
+    "push-dir": "^0.4.1",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10"
   }
 }
